# regionmask

./: .codecov.yml  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  HOW_TO_RELEASE.md  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  codecov.yml  demo_downloadshapefile.ipynb  direct_3D.py  download_regions.yaml  pyproject.toml  readthedocs.yml  requirements.txt  requirements.yml  requirements_rtd.txt  setup.cfg  setup.py  test_timeout.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-additional.yaml  ci.yaml  linting.yaml  pypi-release.yaml  upstream-dev-ci.yaml
ci/: install-upstream-wheels.sh  min_deps_check.py  minimum-dependency-versions-policy.yml
ci/azure/: add-conda-to-path.yml  install.yml  unit-tests.yml
ci/requirements/: bare-minimum.yml  docs.yml  environment.yml  min-all-deps.yml  py27.yml  py310-shapely-2.yml  py310-shapely_lt_2.yml  py36-bare-minimum.yml  py36-min-all-deps.yml  py36.yml  py37-bare-minimum.yml  py37-min-all-deps.yml  py37.yml  py38-bare-minimum.yml  py38-min-all-deps.yml  py38.yml  py39-bare-minimum.yml  py39-min-all-deps.yml  py39.yml  shapely_lt_2.yml
data/: README.md  regions_remote_catalog.yaml
docs/: .gitignore  Makefile  README_ipynp_for_RTD  api.rst  changelog.rst  clean_notebooks  conf.py  defined_countries.rst  defined_landmask.rst  defined_ocean_basins.rst  defined_scientific.rst  environment.yml  environment_explicit.yml  environment_export.yml  environment_rtd.yml  from_geopandas.rst  index.rst  installation.rst  intake_regionmask.rst  make.bat  predefined.rst  requirements.txt  whats_new.rst
docs/_static/notebooks/: create_own_regions.ipynb  logo.ipynb  mask_multidim.ipynb  mask_numpy.ipynb  mask_xarray.ipynb  plotting.ipynb  tutorial_rst.tpl
docs/logo/: logo.ipynb
docs/notebooks/: create_own_regions.ipynb  detect_coords.ipynb  geopandas.ipynb  mask_2D.ipynb  mask_3D.ipynb  mask_3D_frac_approx.ipynb  mask_multidim.ipynb  mask_numpy.ipynb  mask_xarray.ipynb  method.ipynb  method_mask_3D_frac_approx.ipynb  new_behavior.ipynb  overlap.ipynb  plotting.ipynb  tutorial_rst.tpl
docs/source/: api.rst  changelog.rst  conf.py  defined_countries.rst  defined_landmask.rst  defined_ocean_basins.rst  defined_scientific.rst  installation.rst  intake_regionmask.rst
docs/source/notebooks/: create_own_regions.ipynb  detect_coords.ipynb  geopandas.ipynb  mask_2D.ipynb  mask_3D.ipynb  mask_3D_frac_approx.ipynb  method.ipynb  method_mask_3D_frac_approx.ipynb  overlap.ipynb  plotting.ipynb
docs/tutorials/: create_own_regions.rst  mask_numpy.rst  mask_xarray.rst  plotting.rst  tutorial_rst.tpl
region_mask/defined_regions/: srex.py
region_mask/test/: test_Region_cls.py  test_plot.py  test_save_utils.py
regionmask/: README.rst  __init__.py  __main__.py  mask.py  regions.py  save_utils.py  version.py
regionmask/core/: _deprecate.py  _geopandas.py  _geopandas_copia_original.py  coords.py  formatting.py  io.py  mask.py  mask_geopandas.py  mask_input.py  options.py  plot.py  regions.py  save_utils.py  utils.py
regionmask/defined_regions/: __init__.py  _ar6.py  _ar6_pre_rev.py  _ar6_pre_revisions.py  _natural_earth.py  _resources.py  _ressources.py  ar6.py  climate_indices.py  download_regions.yaml  downloadable_regions.yaml  from_geopandas.py  from_yaml.py  giorgi.py  natural_earth.py  naturalearth.py  ne_downloader.py  prudence.py  srex.py  url_from_yaml.py
regionmask/defined_regions/data/AR6_WGI_referenceRegions/: AR6_WGI_referenceRegions.dbf  AR6_WGI_referenceRegions.shp  AR6_WGI_referenceRegions.shx
regionmask/examples/: mask_test_polys.ipynb  mask_weight_proj_class.ipynb  polygon_box.geojson  polygon_box.nc  polygon_multipolys.geojson  polygon_multipolys.nc  polygon_triangle.geojson  polygon_triangle.nc  shp_proj_mask_cdf.ipynb
regionmask/test/: __init__.py  test_OneRegion.py  test_OneRegion_and_Region_cls.py  test_Region_cls.py  test_Regions.py  test_Regions_cls.py  test_defined_regions.py  test_defined_regions_from_yaml.py  test_formatting.py  test_from_geopandas.py  test_from_yaml.py  test_geopandas.py  test_io.py  test_mask.py  test_mask_defined_regions.py  test_plot.py  test_save_utils.py  test_utils.py  test_wrapAngle.py  utils.py
regionmask/tests/: __init__.py  test_OneRegion.py  test_Regions.py  test_create_dataarray.py  test_defined_regions.py  test_deprecate.py  test_formatting.py  test_geopandas.py  test_mask.py  test_mask_3D_frac_approx.py  test_mask_all_touched.py  test_mask_cf_xarray.py  test_mask_defined_regions.py  test_options.py  test_plot.py  test_segmentize.py  test_snap.py  test_test.py  test_unstructured.py  test_utils.py  test_wrapAngle.py  utils.py
travis/: environment.yml
