[metadata]
name = regionmask
author = regionmask Developers
author_email = mathias.hauser@env.ethz.com
license = MIT
description = plotting and creation of masks for spatial regions
long_description_content_type=text/x-rst
long_description = See https://regionmask.readthedocs.io
url = https://github.com/regionmask/regionmask
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    geopandas >= 0.6
    numpy >= 1.17
    pooch >= 1.2
    rasterio >= 1.0
    setuptools >= 40.4  # for pkg_resources
    shapely >= 1.6
    xarray >= 0.15

[tool:pytest]
python_files = test_*.py
testpaths = regionmask/tests
filterwarnings =
    ignore:numpy.ufunc size changed, may indicate binary incompatibility.:RuntimeWarning

[flake8]
ignore=
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    build
    docs
    .git

[isort]
profile = black
skip_gitignore = true
force_to_top = true

[coverage:run]
omit =
    */regionmask/tests/*
